frontend/app/styles/ghdata.styl
background = #eaeaea
foreground = #fafafa
full-shadow = 5px 5px 20px 2px rgba(0, 0, 0, 0.03)

body
  background: background
  padding-bottom: 216px

header
  width: 100%
  min-height: 50px
  padding: 20px
  margin-bottom: 20px
  background: foreground

header .search
  width: 100%
  margin-top: 25px

.header-nav
  margin-top: 25px
  display: block

.header-nav-item
  padding: 10px 10px
  display: inline-block
  float: right
  text-decoration: none
  color: #777
  

#logo
  display: inline-block
  margin-top: 0px
  max-width: 250px

.content
  margin: auto
  width: 95%
  max-width: 1080px

.tabs li.active a
  color: #000
  background: #eaeaea
  border-bottom: 1px solid #eaeaea


section#landing h1
  font-size: 25px

section
  width: 100%;
  padding: 36px
  float: right
  margin: 0 0 24px 0
  background: foreground
  box-shadow: full-shadow

section h2
  font-size: 21px
  line-height: 32px
  color: foreground - 50%
  margin-bottom: 50px

section small
  display: block
  width: 100%
  margin-top: 30px
  padding-right: 20px
  text-align: right
  color: #aaa

section small a
  color: #aaf
  text-decoration: none

section.unmaterialized
  box-shadow: 0 0 0 0
  background: (foreground - 4%)
  padding: 24px 24px 48px 24px
  border-right: 1px solid (background - 5%)
  border-bottom: 1px solid (background - 5%)

#controls
  padding: 28px 36px 0px 36px
  background: (foreground - 4%)
  border-right: 1px solid (background - 5%)
  border-bottom: 1px solid (background - 5%)
  margin-bottom: 20px

.fixed
  position: relative

section.status
  box-shadow: 0 0 0 0
  background: (foreground - 4%)
  padding: 24px 24px 48px 24px

@media (min-width: 1230px)
  #cards
    width: 100%;
    padding-bottom: 100px
    position: relative
    z-index: 9

  section
    z-index: 10

  #landing
    width:100%

  .fixed-container
    z-index: 0
    position: absolute
    top: 245px
    left: calc(50% - (540px))

  .fixed
    position: fixed !important
    top: 25px

.warn
  color: #f00

.warn:before
  content: ' ⚠ '

.below-chart
  position: relative
  z-index: 2
  width: 100%;
  margin: -10px 0 30px 0;

cite.metric
  display: block;
  width:100%
  height: 0
  margin-left: 52px;
  float: left
  text-align: left;
  font-size: 12px
  color: #ccc
  font-style: normal

cite.metric a
  color: #aaa
  text-decoration: underline;

.graph-download
  background: 0
  color: #ccc
  font-size: 0.7em
  height: 5px !important
  line-height: 30px;
  float: right
  margin: -7px 7px 0 0 !important;
  padding: 3px !important;

.graph-download:hover
  background: #eee;
  color: #000

.linechart
  position: relative
  z-index: 1
  height: 300px
  margin-bottom: 60px

.marks
  padding: 10px 0px 0px 0px !important

.role-title > text
  font-size: 20px !important
  font-weight: normal !important

.bubblechart
  width: 100%;

.bubblechart *
  overflow: visible !important;

// .stackedbarchart

.stackedbarchart *
  overflow: visible !important;
  width: 100%;
  // position: relative
  margin-bottom: 30px

.bubblechart svg
  width: 100%;

.mg-line-legend
  display: none

.legend
  position: relative
  margin: 0
  padding: 0
  height: 0
  top: 31px
  left: 55px
  font-size: 14px
  font-weight: bold
  opacity: 0.8

.mg-baselines
  opacity: 0.5

.loader
  width: 100%
  text-align: center
  line-height: 10
  animation: outro 1s, loader 1.5s infinite



@keyframes outro
  0%
    opacity: 1
    filter: grayscale(0%)
  100%
    opacity: 0.2
    filter: grayscale(100%)

@keyframes loader
  0%
    opacity: 0.2
    filter: grayscale(100%)
  50%
    opacity: 0.4
    filter: grayscale(50%)
  100%
    opacity: 0.2
    filter: grayscale(100%)

.intro
  animation: intro 2s

@keyframes intro
  0%
    opacity: 0.2
    filter: grayscale(100%)
  100%
    opacity: 1
    filter: grayscale(0%)

@media print
  body
    zoom: 75%
  section
    min-width: 800px
    min-height: 10.5in
    page-break-after: always;

  section.unmaterialized
    display: none

.hidden, .hidden > *, .hidden > small
  display: none !important

.invis, .invis > *, .invis > small
  z-index: -1;
  opacity: 0 !important;

